# persh

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/persh/: __init__.py  coordinates.py
